--- a/src/components/tour-list/TourList.scss
+++ b/src/components/tour-list/TourList.scss
@@ -3,3 +3,24 @@
   margin: 0 auto;
   padding: 2rem 0;
 }
+
+@media (min-width: 768px) {
+  .tour-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .tour-list {
+    width: 85vw;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1140px) {
+  .tour-list {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
